--- a/Src/HW_4_Jake_Nyiri.Rmd
+++ b/Src/HW_4_Jake_Nyiri.Rmd
@@ -28,6 +28,7 @@ juvenile_hare_data <- raw_hare_data %>%
   
   filter(age == "j")
 
+#rename factor levels for cleaner graph labels and code
 levels(juvenile_hare_data$sex)[levels(juvenile_hare_data$sex)=="f"] <- "Female"
 levels(juvenile_hare_data$sex)[levels(juvenile_hare_data$sex)=="m"] <- "Male"
 
@@ -136,12 +137,15 @@ foot_weight_plot
 ```{r}
 bunny_lm <- lm(hindft ~ weight, data = juvenile_hare_ft_and_weight)
 
+bunny_correlation <- cor.test(juvenile_hare_ft_and_weight$hindft, juvenile_hare_ft_and_weight$weight)
+
 bunny_lm_plot <- juvenile_hare_ft_and_weight %>% 
   ggplot(aes(x=weight, y=hindft))+
   geom_point()+
   geom_smooth(method = "lm")
 
 bunny_lm_plot
+bunny_correlation
 ```
 
 
